AC_INIT([streamermlt], [0.01], [info@moldeointeractive.com.ar], [streamermlt])

AM_INIT_AUTOMAKE

LIBMLT_REQUIRED_VERSION=0.8.8
PKG_CHECK_MODULES( LIBMLT, mlt++ >= $LIBMLT_REQUIRED_VERSION)

AC_SUBST(LIBMLT_CFLAGS)
AC_SUBST(LIBMLT_LIBS)

AC_PROG_CXX
AC_PROG_CC
AC_C_CONST
AC_PROG_LIBTOOL
AM_PROG_LIBTOOL

AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_CXX_C_O

AC_OUTPUT(Makefile src/Makefile )
